# Rizal-Thematic-Exploration

./: .gitattributes  .gitignore  ELFILI_chapters_with_thematic.csv  ENRICHING_NOLI.csv  ENRINCHING_ELFILI.csv  Elfiliv1.py  FLOW semantic lexical.txt  ImprovedThemes_cleaned_all_rows.csv  MERGING.py  NOLI_chapters_with_thematic.csv  NOLI_chapters_with_thematic_p1.csv  NOLI_chapters_with_thematic_p2.csv  README.md  V2updatedBestCode.py  bestCode.py  chapterTitle.py  chapters.csv  check_api.py  check_db_dupes.py  check_vocab.py  cleaned_elfili_corpus.csv  cleaned_noli_corpus.csv  cleaning.py  content_diff.txt  coverage_results.txt  csv_converter.py  debug_highlight.py  diff_config.txt  diff_engine.txt  diff_files.txt  diff_frontend.txt  diff_main.txt  docker-compose.yml  elfili_chapter_titles.csv  elfili_talasalitaan_cleaned_updated.csv  enhanced final claude prompt.txt  enhanced_elfili_chapters.csv  final claude prompt.txt  git_log.txt  git_log_feature.txt  (+62 more)
backend/: .env  README.md  audit_output.txt  ch1_sentences.json  check_vocab.py  count_output.txt  debug_ch7_output.txt  debug_ch7_output_utf8.txt  debug_embeddings.py  debug_output.txt  debug_themes.json  debug_themes_v2.json  diagnostic_eval.py  diagnostic_eval_paired.py  diagnostic_eval_unseen.py  diagnostic_results.json  eval_40.py  eval_40_results.txt  eval_40_results_utf8.txt  eval_anchor_drift.py  eval_results.txt  eval_results_fixed.txt  eval_results_fixed_utf8.txt  eval_results_utf8.txt  eval_results_weighted.txt  eval_results_weighted_utf8.txt  export_log.txt  fetch_top_5.py  figure1_score_matrix.json  figure2_window_scale_scores.json  figure3_tauhan_gate_scatter.json  figure4_greedy_vs_dp.json  figure5_audit_40_sentences.json  figure6_positional_drift.json  list_sents.py  multilingual_report.json  paired_diagnostic_results.json  poetry_out.txt  pyproject.toml  sample_results.json  (+12 more)
backend/app/: main.py  main_old.py
desktop/: noli.txt  (+2 more)
(+253 files in other folders)
