[tool.poetry]
name = "rizal-api"
version = "0.1.0"
description = "Backend API for Rizal Thematic Exploration System"
authors = ["Marcus Oliver <mmkoliver@tip.edu.ph>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sentence-transformers = "^3.3.0"
psycopg2-binary = "^2.9.9"
pgvector = "^0.2.4"
redis = "^5.0.1"
pydantic = {extras = ["email"], version = "^2.6.0"}
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.1"
pandas = "^2.2.0"
stopwordsiso = "^0.6.1"
sqlalchemy = "^2.0.25"
wordfreq = "^3.0.0"
nltk = "^3.9.2"
datasets = "^3.2.0"
pyarrow = "^19.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
httpx = "^0.26.0"
ruff = "^0.2.1"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
